# ttbackend

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  api.yaml  docker-compose.yml  docs.html  mydb.sqlite  squadb.db-shm  squadb.db-wal
.github/workflows/: docker-publish.yaml  pipeline.yaml  tag-on-master-push.yml
fixtures/: address.sql  employee.sql  task.sql  truncate.sql  worktime.sql
migrations/: 0001_create_user_table.sql  0001_setup.down.sql  0001_setup.up.sql  0003_task.up.sql  0004_employee.down.sql  0004_employee.up.sql  0005_worktime.down.sql  0005_worktime.up.sql  0006_constraints.down.sql  0006_constraints.up.sql  0007_initial_addresses.down.sql  0007_initial_addresses.up.sql  0008_initial_employees.down.sql  0008_initial_employees.up.sql  0009_initial_task.down.sql  0009_initial_task.up.sql  0010_initial_worktime.down.sql  0010_initial_worktime.up.sql  1_setup.sql  20240721172148_create_user_table.sql  20240721182547_add_users.sql  2_address.sql  4_employee.sql  5_worktime.sql  6_constraints.sql
src/: auth.rs  database.rs  graphql.rs  lib.rs  main.rs  models.rs  pdf.rs  pdf_gen.rs  security.rs  service.rs  time_utils.rs  tracing_setup.rs
src/graphql/: employee.rs  hello.rs  logs.rs  pdf.rs  query.rs  task.rs  timer.rs  world.rs
src/service/: employee.rs  task.rs  worktime.rs
