[package]
name = "ttbackend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.7", features = ["chrono", "chrono-duration", "log"] }
async-graphql-axum = "7.0.6"
axum = { version = "0.7.5", features = ["tracing"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.124"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10.1"
tokio-test = "0.4.4"
